# cose-rust

./: Cargo.toml  LICENSE  README.md
src/: agent.rs  algs.rs  common.rs  cose_struct.rs  enc_struct.rs  encrypt.rs  errors.rs  headers.rs  kdf_struct.rs  keys.rs  lib.rs  mac.rs  mac_struct.rs  message.rs  recipients.rs  sig_struct.rs  sign.rs  utils.rs
