[package]
name = "cose-rust"
version = "0.1.0"
authors = ["Tiago Ramires"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbor-codec = "0.7.1"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.3"
hex = {version="0.4.3", optional=true}
serde_json = {version="1.0.64", optional=true}

[features]
json = ["hex", "serde_json"] 
