[package]
name = "cose-rust"
version = "0.1.8"
authors = ["Tiago Ramires"]
license = "MIT"
description = "COSE Rust implementation"
repository = "https://github.com/tramires/cose-rust"
readme = "README.md"
keywords = ["cose", "mac", "encryption", "cbor", "signature"]
categories = ["cryptography", "encoding"]
edition = "2018"

[lib]
name = "cose"

[dependencies]
cbor-codec = "0.7.1"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.3"
hex = {version="0.4.3", optional=true}
serde_json = {version="1.0.64", optional=true}

[features]
json = ["hex", "serde_json"] 
